apps/splash/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: splash
spec:
  replicas: 1
  selector:
    matchLabels:
      app: splash
  template:
    metadata:
      labels:
        app: splash
    spec:
      containers:
        - name: nginx
          image: nginx:1.27-alpine # {"$imagepolicy": "flux-system:nginx"}
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
      volumes:
        - name: html
          configMap:
            name: splash-html
