apps/splash/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: splash
spec:
  selector:
    app: splash
  ports:
    - port: 80
      targetPort: 80
